# rust-web

./: Cargo.toml
src/: main.rs
src/controllers/: root.rs
src/views/: home.rs
templates/: _tweet.html  base.html  home.html
